--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
   "homepage": "https://github.com/AnCIity/SSR-Blog#readme",
   "dependencies": {
     "art-template": "^4.13.2",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-art-template": "^1.0.1",
-    "mongoose": "^5.9.5"
+    "express-session": "^1.17.0",
+    "formidable": "^1.2.2",
+    "joi": "^14.3.1",
+    "mongoose": "^5.9.5",
+    "morgan": "^1.10.0"
   }
 }
